force-app/main/default/objects/Review__c/validationRules/Check_Review_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Review_Range</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &lt; 1 || Rating__c &gt; 5</errorConditionFormula>
    <errorMessage>Rating must be in between 1 and 5</errorMessage>
</ValidationRule>